# Scripts

./: arch-update-notify.sh  batdisplay.sh  battery  bk  bmake  clip.sh  comp  daynote  daysto  duration.sh  gitday.sh  gitroot  greeter.sh  ide  impling  jupyter-ssh.sh  lg  linelog  llog  mkhash.py  mkkey.py  multisudo.sh  multisudo2.sh  nerdfont  newc  newc.sh  newcpp  newts.sh  once.sh  py2bin  quickignore  quotes.py  search  sjar  sloc.py  snek  snek.sh  swaybar.sh  tester.c  timelog.sh  (+4 more)
installs/: docker.sh  gh.sh  mullvad.sh
jupyter_ssh/: pyproject.toml
