[tool.poetry]
name = "jupyter-ssh"
version = "0.1.0"
description = ""
authors = ["keagud <keagud@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^3.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
pyright = "^1.1.329"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
